# bazel-gazelle-issue-1192

./: BUILD.bazel  README.md  WORKSPACE  bazel-bazel-gazelle-issue  bazel-bin  bazel-out  bazel-testlogs  go.mod  go.sum  tools.go
